force-app/main/default/objects/SFDC_Approvals__c/SFDC_Approvals__c.object-meta.xml
<CustomObject>
    <description>Track who needs to approve which invoices, and the status of each approval request.</description>
    <label>Approvals</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>