force-app/main/default/objects/SFDC_Approvals__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N40000001Q7F2EAK</relationshipName>
    <type>Lookup</type>
</CustomField>