force-app/main/default/objects/SFDC_Approvals__c/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <label>Invoice</label>
    <referenceTo>SFDC_Invoices__c</referenceTo>
    <relationshipName>R00N40000001Q7ExEAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>