force-app/main/default/objects/SFDC_Approvals__c/listViews/AllApprovals.listView-meta.xml
<ListView>
    <fullName>AllApprovals</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Invoices__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approvals</label>
</ListView>