force-app/main/default/objects/SFDC_Approvals__c/listViews/MyPendingApprovals.listView-meta.xml
<ListView>
    <fullName>MyPendingApprovals</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Invoices__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Pending Approvals</label>
</ListView>